--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
 	<head>
 		<title>Flavio Portfolio</title>
 		<!-- Latest compiled and minified CSS -->
@@ -49,10 +48,8 @@
 				<div class=" col-xs-12 col-sm-8  col-md-7 panel panel-default panel-main">
 				  <div class="panel-body">
 				  	<div class="row">
-				  		<div class="col-xs-12">
-					    	<h2>Contact</h2>
-					    	<hr>
-				    	</div>
+				    	<h2>Contact</h2>
+				    	<hr>
 				  	</div>
 						<!-- Form -->
 						<div class="row">
@@ -98,27 +95,28 @@
 				<div class="col-xs-12 col-sm-3 col-md-4 panel panel-default pull-right panel-side">
 				  <div class="panel-body">
 				  	<!-- Title -->
-				  	<div class="col-xs-12 text-center">
-					    <h3>Connect Wiht Me</h3>
-					    <hr>
-				    </div>
+						<div class="row">
+					  	<div class="col-xs-12 text-center">
+						    <h4>Connect Wiht Me</h4>
+						    <hr>
+					    </div>							
+						</div>
 						<!-- End Title -->
-
 				    <!-- Connect With Me Container -->
 				    <div class="row">
 				    	<div class="col-xs-4 col-sm-12 col-md-4 text-center">
 				    		<ul class="nav nav-pills">
-							  	<li role="presentation"><a target="_blank" href="https://stackoverflow.com/users/7381659/flavio-r-martins" alt="https://stackoverflow.com/users/7381659/flavio-r-martins"><img src="./assets/images/stack.png"/></a></li>
+							  	<li role="presentation"><a target="_blank" href="https://stackoverflow.com/users/7381659/flavio-r-martins"><img src="./assets/images/stack.png" alt="stackoverflow"/></a></li>
 							  </ul>
 				    	</div>
 				    	<div class="col-xs-4 col-sm-12 col-md-4 text-center">
 				    		<ul class="nav nav-pills">
-							  	<li role="presentation"><a target="_blank" href="https://github.com/martinsflavio" alt="https://github.com/martinsflavio"><img src="./assets/images/gitHub.png"/></a></li>
+							  	<li role="presentation"><a target="_blank" href="https://github.com/martinsflavio"><img src="./assets/images/gitHub.png" alt="github" /></a></li>
 							  </ul>								
 				    	</div>
 				    	<div class="col-xs-4 col-sm-12 col-md-4 text-center">
 				    		<ul class="nav nav-pills">
-							  	<li role="presentation"><a target="_blank" href="https://www.linkedin.com/in/martinsflavio"><img src="./assets/images/linkedIn.png" alt="https://www.linkedin.com/in/martinsflavio" /></a></li>
+							  	<li role="presentation"><a target="_blank" href="https://www.linkedin.com/in/martinsflavio"><img src="./assets/images/linkedIn.png" alt="linkedin"/></a></li>
 							  </ul>
 							</div>
 				    </div>
