--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
 	<head>
 		<title>Flavio Portfolio</title>
 		<!-- Latest compiled and minified CSS -->
@@ -48,15 +47,17 @@
 				<!-- main -->
 				<div class=" col-xs-12 col-sm-8  col-md-7 panel panel-default">
 				  <div class="panel-body">
-			    	<div class="col-xs-12">
-			  	    <h2>About Me</h2>
-			  	    <hr>
-			      </div>
-						<img src="./assets/images/me.png" alt="Flávio Martins" class="img-thumbnail pull-left">
-					  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at dui tincidunt, sollicitudin ante vitae, sodales risus. Nunc lacinia diam sit amet elit dictum, in facilisis massa porta. Nunc faucibus, ligula vel tristique ultrices, odio neque suscipit risus, eu auctor est ipsum vitae diam. Donec ut mauris ultrices, vulputate eros eu, venenatis enim. Maecenas nec enim in eros iaculis ullamcorper. Morbi scelerisque venenatis pharetra. Etiam felis tellus, sodales sed ornare nec, eleifend sit amet est.
-					  </p>
-					  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at dui tincidunt, sollicitudin ante vitae, sodales risus. Nunc lacinia diam sit amet elit dictum, in facilisis massa porta. Nunc faucibus, ligula vel tristique ultrices, odio neque suscipit risus, eu auctor est ipsum vitae diam. Donec ut mauris ultrices, vulputate eros eu, venenatis enim. Maecenas nec enim in eros iaculis ullamcorper. Morbi scelerisque venenatis pharetra. Etiam felis tellus, sodales sed ornare nec, eleifend sit amet est.
-					  </p>
+				  	<div class="row">
+				  	  <h2>About Me</h2>
+				  	  <hr>
+				  	</div>
+				  	<div class="row">
+			  			<img src="./assets/images/me.png" alt="Flávio Martins" class="img-thumbnail pull-left">
+			  		  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at dui tincidunt, sollicitudin ante vitae, sodales risus. Nunc lacinia diam sit amet elit dictum, in facilisis massa porta. Nunc faucibus, ligula vel tristique ultrices, odio neque suscipit risus, eu auctor est ipsum vitae diam. Donec ut mauris ultrices, vulputate eros eu, venenatis enim. Maecenas nec enim in eros iaculis ullamcorper. Morbi scelerisque venenatis pharetra. Etiam felis tellus, sodales sed ornare nec, eleifend sit amet est.
+			  		  </p>
+			  		  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at dui tincidunt, sollicitudin ante vitae, sodales risus. Nunc lacinia diam sit amet elit dictum, in facilisis massa porta. Nunc faucibus, ligula vel tristique ultrices, odio neque suscipit risus, eu auctor est ipsum vitae diam. Donec ut mauris ultrices, vulputate eros eu, venenatis enim. Maecenas nec enim in eros iaculis ullamcorper. Morbi scelerisque venenatis pharetra. Etiam felis tellus, sodales sed ornare nec, eleifend sit amet est.
+			  		  </p>
+				  	</div>
 				  </div>
 				</div>
 				<!-- End main -->
@@ -64,27 +65,28 @@
 				<div class="col-xs-12 col-sm-3 col-md-4 panel panel-default pull-right">
 				  <div class="panel-body">
 				  	<!-- Title -->
-				  	<div class="col-xs-12 text-center">
-					    <h3>Connect Wiht Me</h3>
-					    <hr>
-				    </div>
+				  	<div class="row">
+					  	<div class="col-xs-12 text-center">
+						    <h4>Connect Wiht Me</h4>
+						    <hr>
+					    </div>
+				  	</div>
 						<!-- End Title -->
-
 				    <!-- Connect With Me Container -->
 				    <div class="row">
 				    	<div class="col-xs-4 col-sm-12 col-md-4 text-center">
 				    		<ul class="nav nav-pills">
-							  	<li role="presentation"><a target="_blank" href="https://stackoverflow.com/users/7381659/flavio-r-martins" alt="https://stackoverflow.com/users/7381659/flavio-r-martins"><img src="./assets/images/stack.png"/></a></li>
+							  	<li role="presentation"><a target="_blank" href="https://stackoverflow.com/users/7381659/flavio-r-martins"><img src="./assets/images/stack.png" alt="stackoverflow"/></a></li>
 							  </ul>
 				    	</div>
 				    	<div class="col-xs-4 col-sm-12 col-md-4 text-center">
 				    		<ul class="nav nav-pills">
-							  	<li role="presentation"><a target="_blank" href="https://github.com/martinsflavio" alt="https://github.com/martinsflavio"><img src="./assets/images/gitHub.png"/></a></li>
+							  	<li role="presentation"><a target="_blank" href="https://github.com/martinsflavio"><img src="./assets/images/gitHub.png" alt="github"/></a></li>
 							  </ul>								
 				    	</div>
 				    	<div class="col-xs-4 col-sm-12 col-md-4 text-center">
 				    		<ul class="nav nav-pills">
-							  	<li role="presentation"><a target="_blank" href="https://www.linkedin.com/in/martinsflavio"><img src="./assets/images/linkedIn.png" alt="https://www.linkedin.com/in/martinsflavio" /></a></li>
+							  	<li role="presentation"><a target="_blank" href="https://www.linkedin.com/in/martinsflavio"><img src="./assets/images/linkedIn.png" alt="linkedin"/></a></li>
 							  </ul>
 							</div>
 				    </div>
