--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,8 @@
 		<!-- End Head -->
 
 		<!-- Body -->
-		<section class="row">
-			<div class="container topBottomSpace">
+		<section class="row topBottomSpace">
+			<div class="container">
 				<!-- main -->
 				<div class=" col-xs-12 col-sm-8  col-md-7 panel panel-default panel-main">
 				  <div class="panel-body">
