--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
 			      </button>
-			      <a class="navbar-brand" href="#"><span id="myName">Flavio Martins</span></a>
+			      <a class="navbar-brand" href="#"><span id="my-name">Flavio Martins</span></a>
 			    </div>
 
 			    <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
@@ -42,7 +42,7 @@
 		<!-- End Head -->
 
 		<!-- Body -->
-		<section class="row topBottomSpace">
+		<section class="row top-bottom-space">
 			<div class="container">
 				<!-- main -->
 				<div class=" col-xs-12 col-sm-8  col-md-7 panel panel-default panel-main">
