--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,8 @@
 		<link rel="stylesheet" href="./assets/css/bootstrap.css">
 		<!-- Customized Stylesheet -->
 		<link rel="stylesheet" type="text/css" href="./assets/css/main.css">
+		<!-- Animation Stylesheet -->
+		<link rel="stylesheet" type="text/css" href="./assets/css/animate.css">
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		<!-- View Port -->
@@ -55,7 +57,7 @@
 						</div>
 
 				  	<div class="row">
-		  		    <div class="col-sm-6 col-md-4">
+		  		    <div class="col-sm-6 col-md-4 animated fadeIn">
 		  		      <div class="thumbnail">
 		  		        <img src="http://placehold.it/400x400" alt="...">
 		  		        <div class="caption text-center">
@@ -64,7 +66,7 @@
 		  		      </div>
 		  		    </div>
 
-		  		    <div class="col-sm-6 col-md-4">
+		  		    <div class="col-sm-6 col-md-4 animated fadeIn">
 		  		      <div class="thumbnail">
 		  		        <img src="http://placehold.it/400x400" alt="...">
 		  		        <div class="caption text-center">
@@ -73,7 +75,7 @@
 		  		      </div>
 		  		    </div>
 		  		    
-		  		    <div class="col-sm-6 col-md-4">
+		  		    <div class="col-sm-6 col-md-4 animated fadeIn">
 		  		      <div class="thumbnail">
 		  		        <img src="http://placehold.it/400x400" alt="...">
 		  		        <div class="caption text-center">
@@ -82,7 +84,7 @@
 		  		      </div>
 		  		    </div>
 
-		  		    <div class="col-sm-6 col-md-4">
+		  		    <div class="col-sm-6 col-md-4 animated fadeIn">
 		  		      <div class="thumbnail">
 		  		        <img src="http://placehold.it/400x400" alt="...">
 		  		        <div class="caption text-center">
@@ -91,7 +93,7 @@
 		  		      </div>
 		  		    </div>
 
-		  		    <div class="col-sm-6 col-md-4">
+		  		    <div class="col-sm-6 col-md-4 animated fadeIn">
 		  		      <div class="thumbnail">
 		  		        <img src="http://placehold.it/400x400" alt="...">
 		  		        <div class="caption text-center">
