--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
 		<link rel="stylesheet" href="./assets/css/bootstrap.css">
 		<!-- Customized Stylesheet -->
 		<link rel="stylesheet" type="text/css" href="./assets/css/main.css">
+		<!-- Animation Stylesheet -->
+		<link rel="stylesheet" type="text/css" href="./assets/css/animate.css">
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		<!-- View Port -->
