--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,6 @@
 		<link rel="stylesheet" type="text/css" href="./assets/css/main.css">
 		<!-- Animation Stylesheet -->
 		<link rel="stylesheet" type="text/css" href="./assets/css/animate.css">
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		<!-- View Port -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
@@ -104,22 +102,17 @@
 					    </div>							
 						</div>
 						<!-- End Title -->
+
 				    <!-- Connect With Me Container -->
 				    <div class="row">
 				    	<div class="col-xs-4 col-sm-12 col-md-4 text-center">
-				    		<ul class="nav nav-pills">
-							  	<li role="presentation"><a target="_blank" href="https://stackoverflow.com/users/7381659/flavio-r-martins"><img src="./assets/images/stack.png" alt="stackoverflow"/></a></li>
-							  </ul>
+				    		<a target="_blank" href="https://stackoverflow.com/users/7381659/flavio-r-martins"><img id="connect-img" src="./assets/images/stack.png" alt="stackoverflow"/></a>
 				    	</div>
 				    	<div class="col-xs-4 col-sm-12 col-md-4 text-center">
-				    		<ul class="nav nav-pills">
-							  	<li role="presentation"><a target="_blank" href="https://github.com/martinsflavio"><img src="./assets/images/gitHub.png" alt="github" /></a></li>
-							  </ul>								
+							  <a target="_blank" href="https://github.com/martinsflavio"><img id="connect-img" src="./assets/images/gitHub.png" alt="github"/></a>					
 				    	</div>
 				    	<div class="col-xs-4 col-sm-12 col-md-4 text-center">
-				    		<ul class="nav nav-pills">
-							  	<li role="presentation"><a target="_blank" href="https://www.linkedin.com/in/martinsflavio"><img src="./assets/images/linkedIn.png" alt="linkedin"/></a></li>
-							  </ul>
+								<a target="_blank" href="https://www.linkedin.com/in/martinsflavio"><img id="connect-img" src="./assets/images/linkedIn.png" alt="linkedin"/></a>
 							</div>
 				    </div>
 				    <!-- End Connect With Me Container -->
@@ -137,6 +130,9 @@
 	    </div>
 		</footer>
 		<!-- End Footer -->
-
+		<!-- Jquery -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	</body>
 </html>
